adjusted styles in LA

--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -11,6 +11,7 @@
       <script src="det_sarrus.js" defer></script>
       <link rel="stylesheet" href="style.css" />
       <script src="matrixScript.js" defer></script>
+      <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
       <title>Determinant rozvoj</title>
    </head>
    <body onload="changeMatrix()">
@@ -76,7 +77,7 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-offset="56">
                   <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a class="navbar-brand" href="#"style="padding-left: 1rem;">Matice</a>
+                  <a class="navbar-brand" href="../landingPage/index.html"style="padding-left: 1rem;">Matice</a>
                </div>
             </nav>
             <div class="offcanvas-backdrop offcanvas backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
@@ -103,7 +104,7 @@
                </div>
             </div>
             <div class="container my-5">
-               <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+               <ul class="nav nav-tabs nav-fill mb-4" id="myTab" role="tablist">
                  <li class="nav-item" role="presentation">
                    <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button" role="tab" aria-controls="theory" aria-selected="true">Teória</button>
                  </li>
@@ -116,7 +117,7 @@
                </ul>
                <div class="tab-content" id="myTabContent">
                  <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
-                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed nulla velit. Morbi viverra libero a neque feugiat lacinia. In consequat, quam vitae vestibulum sollicitudin, ipsum sapien bibendum dolor, id tincidunt nulla urna at dui.</p>
+                   <p>Zo strednej školy viete, že matica typu m &#xd7 n je sústava mn čísiel usporiadaných v tvare obdĺžnikovej "tabuľky" s m riadkami a n stĺpcami. Ako príklad uvádzame nasledujúce tri matice, ktoré majú postupne typ 1 &#xd7 3, m &#xd7 1  a 3 &#xd7 4:</p>
                  </div>
                  <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
                    <p>Tab 2 content</p>
