--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -38,7 +38,7 @@
       <header>
          <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #f5c05d;">
             <div class="container-fluid">
-               <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="../landingPage/index.html">
+               <a class="navbar-brand pad" style="padding: 0.5rem 0; font-weight: bold;" href="../landingPage/index.html">
                 <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calculator" viewBox="0 0 16 16">
                   <path d="M12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
                   <path d="M4 2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-2zm0 4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-4z"/>
@@ -91,7 +91,7 @@
             <div class="card animated bounce" id="exercise">CVIČENIA</div>
          </div>
       </main>
-      <footer class="text-center text-lg-start" style="background-color: lightblue; height: 4rem;">
+      <footer class="text-center text-lg-start" style="background-color: lightgray; height: 4rem;">
          <!-- Copyright -->
          <p style="color: white; margin-bottom: 0; padding-top: 1rem; text-align: center;">© 2023 Copyright: Marek Belis</p>
          </div>
