--- a/determinant_sarus/index.html
+++ b/determinant_sarus/index.html
@@ -4,9 +4,8 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
       <script src="det_sarrus.js" defer></script>
       <link rel="stylesheet" href="style.css" />
@@ -140,6 +139,8 @@
                   <option value="4" selected>4x4</option>
                   <option value="5">5x5</option>
                </select>
+               <label for="index">Zvol stĺpec</label>
+               <input max="4" type="number" id="index">
                <div  style="display: flex; align-items: center;">
                   <table id="matrix" style="outline: none; margin: 1rem; "></table>
                   <p  id="mxVysledok1" style="margin: 0; display: flex; align-items: center;">=</p>
