--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -90,7 +90,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-auto">
-                <a class="nav-link" id="la" href="../témy/index.html">Kalkulačky</a>
+                <a class="nav-link" id="la" href="#">Kalkulačky</a>
               </li>
               <li class="nav-item mx-auto">
                 <a class="nav-link" id="bordered" href="#">Kontakt</a>
