responsive aside filled with links

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -75,40 +75,40 @@
       <main>
          <h2 id="latitle">Matice</h2>
          <div class="cards" style="margin-bottom: 11rem;">
-            <a class="nav-link" href="../témy/detStvMatice/index.html">
+            <a class="nav-link1" href="../témy/detStvMatice/index.html">
                <div class="card">ÚVOD</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">RIADKOVÉ OPERÁCIE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">GAUSSOV TVAR MATICE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">VÝPOČET GAUSSOVHO TVARU MATICE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">ALGEBRAICKÉ OPERÁCIE S MATICAMI</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">ŠTVORCOVÉ MATICE: POJEM INVERZNEJ MATICE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">VÝPOČET INVERZNEJ MATICE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">DEFINÍCIA DETERMINANTU ŠTVORCOVEJ MATICE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">DETERMINANT A RIADKOVÉ OPERÁCIE</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">INVERZNÁ MATICA POMOCOU DETERMINANTOV</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card">DÔLEŽITÉ VZŤAHY MEDZI UVEDENÝMI POJMAMI</div>
              </a>
-             <a class="nav-link" href="#">
+             <a class="nav-link1" href="#">
                <div class="card animated bounce" id="exercise">CVIČENIA</div>
              </a>
              
