--- a/témy/detStvMatice/index.html
+++ b/témy/detStvMatice/index.html
@@ -18,7 +18,7 @@
       </header>
       <div class="container-fluid">
       <div class="row">
-         <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; border-right: 1px solid lightgray; min-width: 220px; overflow-y:auto;">
+         <nav class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block" style="margin-top: 3.5rem; height: calc(100vh - 3rem); position: fixed; min-width: 220px; overflow-y:auto;">
             <div class="sidebar-sticky">
                <ul class="nav flex-column">
                   <li class="nav-item">
@@ -82,22 +82,52 @@
             <div class="offcanvas-backdrop offcanvas backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
             <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar" style="top: 56px; height: calc(100% - 56px);">
                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title">Sidebar</h5>
+                  <a class="nav-link active"  href="../../landingPage/index.html">
+                     <svg style="margin: 5px 0 0 5px" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                     </svg>
+                     Domov
+                  </a>
                   <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                </div>
                <div class="offcanvas-body d-flex flex-column p-0" style="height: 100%; overflow-y: auto;">
                   <ul class="nav flex-column">
                      <li class="nav-item">
-                        <a class="nav-link active" href="#">Dashboard</a>
+                        <a class="nav-link " href="#">Úvod</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
+                        <a class="nav-link " href="#">Riadkové operácie</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Orders</a>
+                        <a class="nav-link" href="#">Gaussov tvar matice</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Customers</a>
+                        <a class="nav-link" href="#">Výpočet gaussovho tvaru matice</a>
+                     </li>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Algebraické operácie s maticami</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Štvorcové matice, pojem inverznej matice</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Výpočet inverznej matice</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Definícia determinantu štvorcovej matice</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Determinant a riadkové operácie</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Inverzná matica pomocou determinantov</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Dôležité vzťahy medzi uvedenými pojmami</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" style="margin-bottom: 2rem;" href="#">Cvičenia</a>
                      </li>
                   </ul>
                </div>
