--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -75,7 +75,7 @@
       <main>
          <h2 id="latitle">Matice</h2>
          <div class="cards" style="margin-bottom: 11rem;">
-            <a class="nav-link1" href="../témy/detStvMatice/index.html">
+            <a class="nav-link1" href="témy/detStvMatice/index.html">
                <div class="card">ÚVOD</div>
              </a>
              <a class="nav-link1" href="#">
