moved styles for temy

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -10,6 +10,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="det_sarrus.js" defer></script>
       <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="../../../styleAll.css">
       <script src="matrixScript.js" defer></script>
       <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
       <title>Determinant rozvoj</title>
