--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -31,7 +31,7 @@
       <div class="container-fluid">
       <div class="row">
          <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12" style="  position: fixed; height: calc(100vh - 3rem); margin-top: 56px; min-width: 220px; overflow-y:auto;"></nav>
-         <main  class="col-md-12 col-lg-10 offset-md-0 offset-lg-2" style="margin-top: 3.5rem; ">
+         <main style="margin-top: 3rem;">
             <header><nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
                <div class="container-fluid justify-content-start">
                   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-offset="56">
@@ -44,7 +44,7 @@
             
             <div class="offcanvas-backdrop offcanvas backdrop" id="backdr" data-bs-dismiss="offcanvas"></div>
             <div class="offcanvas offcanvas-start fixed-top" tabindex="-1" id="sidebar" style="top: 56px; height: calc(100% - 56px);"></div>
-            <div class="container my-5">
+            <div class="container my-5" >
                <ul class="nav nav-tabs nav-fill mb-4" id="myTab" role="tablist"></ul>
                <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
