--- a/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
@@ -8,10 +8,8 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script src="det_sarrus.js" defer></script>
-      <link rel="stylesheet" href="style.css" />
       <link rel="stylesheet" href="../../../styleAll.css">
-      <script src="matrixScript.js" defer></script>
+      <script src="sizeAdjust.js" defer></script>
       <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
       <title>Determinant rozvoj</title>
    </head>
@@ -19,7 +17,7 @@
       $(document).ready(function() {
       	$(document).ready(function() {
     $('#sidebar12').load('../../../components/sidebar.html', function() {
-        $('#sidebar12').find('li:contains("Definícia determinantu štvorcovej matice")').addClass('active').children('a').addClass('active');
+        $('#sidebar12').find('li:contains("Determinant a riadkové operácie")').addClass('active').children('a').addClass('active');
     });
 });     
          $('#sidebar').load('../../../components/collapse_bar.html');
@@ -30,7 +28,7 @@
    <body >
       <div class="container-fluid">
       <div class="row">
-         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12"></nav>
+         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12" ></nav>
          <main style="margin-top: 3rem;">
             <header><nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
                <div class="container-fluid justify-content-start">
@@ -58,69 +56,6 @@
                   </div>
                </div>
             </div>
-
-            
-            <div style=" margin: 5rem auto; margin-top: 50rem;">
-               <label for="index">Zvol stĺpec</label>
-               <input max="4" type="number" id="index">
-               <div  style="display: flex; align-items: center;">
-                  <table id="matrix" style="outline: none; margin: 1rem; "></table>
-                  <p  id="mxVysledok1" style="margin: 0; display: flex; align-items: center;">=</p>
-               </div>
-               <button id="calcBTN1"  type="button" class="btn btn-outline-success">
-               Vypočítaj
-               </button>
-            </div>
-            <style>
-               #matrix-input td {
-               padding: 0.2rem;
-               }
-               #matrix-input td:focus-within input {
-               outline: none;
-               background-color: greenyellow;
-               }
-               #matrix-input {
-               margin: auto;
-               border-right: 1px solid black;
-               border-left: 1px solid black;
-               }
-            </style>
-            <div style="text-align: center;padding-bottom: 5rem;">
-               <label for="matrix-size">Veľkosť matice:</label>
-               <input
-                  style="border: none; border-bottom: 1px solid green; text-align: center"
-                  type="number"
-                  id="matrix-size"
-                  name="matrix-size"
-                  value="3"
-                  min="1"
-                  max="10"
-                  />
-               <div style="display: flex; justify-content: center;">
-                  <table style="margin: 1rem" id="matrix-input">
-                     <tbody>
-                        <!-- use a loop to create rows and columns based on user input -->
-                        <?php for ($i = 0; $i < 3; $i++) : ?>
-                        <tr>
-                           <?php for ($j = 0; $j < 3; $j++) : ?>
-                           <td>
-                              <input
-                                 type="number"
-                                 name="matrix[<?= $i ?>][<?= $j ?>]"
-                                 value="0"
-                                 style="width: 1.5rem"
-                                 />
-                           </td>
-                           <?php endfor; ?>
-                        </tr>
-                        <?php endfor; ?>
-                     </tbody>
-                  </table>
-                  <p id="mxVysledok" style="margin: auto 0">=</p>
-               </div>
-               <button id="calcBTN" type="button" class="btn btn-outline-success">
-               Vypočítaj
-               </button>
          </main>
          </div>
       </div>
