fixed determinants size inputs

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -59,10 +59,11 @@
                </div>
             </div>
 
-            
+
             <div style=" margin: 5rem auto; margin-top: 50rem;">
                <label for="index">Zvol stĺpec</label>
-               <input max="4" type="number" id="index">
+               <input max="4" value="1" type="number" id="index">
+               <input type="hidden" value="4" id="matrixSize">
                <div  style="display: flex; align-items: center;">
                   <table id="matrix" style="outline: none; margin: 1rem; "></table>
                   <p  id="mxVysledok1" style="margin: 0; display: flex; align-items: center;">=</p>
