added all indexes sites

--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -72,43 +72,43 @@
             </div>
          </nav>
       </header>
-      <main>
+      <main >
          <h2 id="latitle">Matice</h2>
          <div class="cards" style="margin-bottom: 11rem;">
-            <a class="nav-link1" href="#">
+            <a class="nav-link1" href="témy/uvod/index.html">
                <div class="card">ÚVOD</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/riadkoveOperacie/index.html">
                <div class="card">RIADKOVÉ OPERÁCIE</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/gaussovTvarMatice/index.html">
                <div class="card">GAUSSOV TVAR MATICE</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/vypočetGauss/index.html">
                <div class="card">VÝPOČET GAUSSOVHO TVARU MATICE</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/algebrOperacieMatice/index.html">
                <div class="card">ALGEBRAICKÉ OPERÁCIE S MATICAMI</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/stvMatica/index.html">
                <div class="card">ŠTVORCOVÉ MATICE: POJEM INVERZNEJ MATICE</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/invMaticaVypocet/index.html">
                <div class="card">VÝPOČET INVERZNEJ MATICE</div>
              </a>
              <a class="nav-link1" href="témy/detStvMatice/index.html">
                <div class="card">DEFINÍCIA DETERMINANTU ŠTVORCOVEJ MATICE</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/deterRiadkoveOperacie/index.html">
                <div class="card">DETERMINANT A RIADKOVÉ OPERÁCIE</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/invMaticaDet/index.html">
                <div class="card">INVERZNÁ MATICA POMOCOU DETERMINANTOV</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/vztahyMedziPojmami/index.html">
                <div class="card">DÔLEŽITÉ VZŤAHY MEDZI UVEDENÝMI POJMAMI</div>
              </a>
-             <a class="nav-link1" href="#">
+             <a class="nav-link1" href="témy/cvicenia/index.html">
                <div class="card animated bounce" id="exercise">CVIČENIA</div>
              </a>
              
