--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -14,7 +14,7 @@
       <script src="../../../sizeAdjust.js" defer></script>
       <script src="matrixScript.js" defer></script>
       <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-      <title>Determinant rozvoj</title>
+      <title>Determinant štvorcovej matice</title>
    </head>
    <script>
       $(document).ready(function() {
