--- a/linearnaAlgebra/témy/gaussovTvarMatice/index.html
+++ b/linearnaAlgebra/témy/gaussovTvarMatice/index.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="../../../styleAll.css">
       <script src="../../../sizeAdjust.js" defer></script>
       <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-      <title>Determinant rozvoj</title>
+      <title>Gaussov tvar matice</title>
    </head>
    <script>
       $(document).ready(function() {
