--- a/linearnaAlgebra/témy/riadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/riadkoveOperacie/index.html
@@ -80,7 +80,8 @@
                           </div>
                         </div>
                       </div>                  
-                        <p>Dve matice nazveme ekvivalentné, ak jednu možno utvorit' z druhej pomocou konečnej postupnosti riadkových operácií O1, O2, O3. Pre ekvivalenciu matíc rezervujeme symbol $\cong$; pre matice z nášho príkladu teda platí ${\bf A}\cong {\bf B}$.</p>
+                        <p>Dve matice nazveme ekvivalentné, ak jednu možno utvorit' z druhej pomocou konečnej postupnosti riadkových operácií O1, O2, O3. Pre ekvivalenciu matíc rezervujeme symbol \(\cong\)
+                           ; pre matice z nášho príkladu teda platí \({\bf A}\cong {\bf B}\).</p>
                      </div>
                      
                      <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
