--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -23,7 +23,9 @@
         $('#sidebar12').find('li:contains("Definícia determinantu štvorcovej matice")').addClass('active').children('a').addClass('active');
     });
 });     
-         $('#sidebar').load('../../../components/collapse_bar.html');
+         $('#sidebar').load('../../../components/collapse_bar.html',function() {
+            $('#sidebar').find('li:contains("Definícia determinantu štvorcovej matice")').addClass('active').children('a').addClass('active');
+         });
          $('#myTab').load('../../../components/tab_links.html');
 
       });
